--- a/test/scss/variables.scss
+++ b/test/scss/variables.scss
@@ -1,1 +1,49 @@
-$whitecolor: #FFFFFF;
+// ---- Colors ---- //
+
+// Generic
+$white: #fff;
+$black: #000;
+$slate: #8ca5af;
+$slate-dark: #4f6f7b;
+$gray-medium: #757575;
+
+// Brand
+$brand-gray-light: #eceff1;
+$brand-gray-medium: #d6d6d6;
+$brand-gray: #b0bec5;
+$brand-gray-dark: #92989b;
+$brand-blue-light: #9fd1da;
+$brand-blue: #64b5f6;
+$brand-blue-gray: #647b86;
+$brand-blue-gray-dark: #546E7A;
+$brand-solitude: #ebeff2;
+$brand-charcoal-dark: #263238;
+$brand-cyan: #84ffff;
+$brand-green-light: #9ccc65;
+$brand-green: #4b7d2f;
+$brand-green-dark: #78c257;
+$brand-olive: #6ab344;
+$brand-yellow: #ffb74d;
+$brand-pink: #d70073;
+$brand-purple: #ba68c8;
+$brand-orchid-dark: #6b3b63;
+$brand-slate: #4e6c78;
+
+
+$brand-colors: (
+  'gray-light': $brand-gray-light,
+  'gray': $brand-gray,
+  'gray-dark': $brand-gray-dark,
+  'blue-light': $brand-blue-light,
+  'blue': $brand-blue,
+  'blue-gray': $brand-blue-gray,
+  'charcoal-dark': $brand-charcoal-dark,
+  'cyan': $brand-cyan,
+  'green-light': $brand-green-light,
+  'green': $brand-green,
+  'olive': $brand-olive,
+  'solitude': $brand-solitude,
+  'yellow': $brand-yellow,
+  'purple': $brand-purple,
+  'orchid-dark': $brand-orchid-dark
+);
