--- a/test/scss/_variables.scss
+++ b/test/scss/_variables.scss
@@ -62,7 +62,7 @@ $icon-font-size: $font-size-small;
 $icon-font-size-lg: $font-size-large;
 
 
-
+//@sass-export=false
 $brand-colors: (
   'gray-light': $brand-gray-light,
   'gray': $brand-gray,
