--- a/test/scss/_colors.scss
+++ b/test/scss/_colors.scss
@@ -1,4 +1,4 @@
-// Generic
+
 $black: #000;
 $slate: #8ca5af;
 $slate-dark: #4f6f7b;
@@ -12,8 +12,18 @@ $brand-gray-dark: #92989b;
 $brand-blue-light: #9fd1da;
 $brand-blue: #64b5f6;
 $brand-blue-gray: #647b86;
+//@end-sass-export-section
+
+
+//other globals
+$brand-pink: #d70073;
+$brand-purple: #ba68c8;
+$brand-orchid-dark: #6b3b63;
+
+/**
+ * @sass-export-section="other-colors"
+ */
 $brand-blue-gray-dark: #546E7A;
-//@sass-export-section="brand-colors-secondary"
 $brand-solitude: #ebeff2;
 $brand-charcoal-dark: #263238;
 $brand-cyan: #84ffff;
@@ -22,7 +32,13 @@ $brand-green: #4b7d2f;
 $brand-green-dark: #78c257;
 $brand-olive: #6ab344;
 $brand-yellow: #ffb74d;
-$brand-pink: #d70073;
-$brand-purple: #ba68c8;
-$brand-orchid-dark: #6b3b63;
+//@end-sass-export-section
+
+
+/**
+ * @sass-export-section="darkens"
+ */
+ $darken-pink: darken($brand-pink, 5%);
+ $darken-purple: darken($brand-purple, 5%);
+
 //@end-sass-export-section
