Test Cases: Renaming globals to variables

--- a/test/scss/_colors.scss
+++ b/test/scss/_colors.scss
@@ -15,7 +15,7 @@ $brand-blue-gray: #647b86;
 //@end-sass-export-section
 
 
-//other globals
+//other variables
 $brand-pink: #d70073;
 $brand-purple: #ba68c8;
 $brand-orchid-dark: #6b3b63;
