--- a/test/scss/_maps.scss
+++ b/test/scss/_maps.scss
@@ -30,10 +30,8 @@ $map-get: (
 
 // @sass-export-section="funcs"
 $funcs: (
-  max: max(1px, 4px),
-  min: min(1px, 4px),
-  str-index: str-index("Helvetica Neue", "Neue"),
-  adjust-color: adjust-color(#d2e1dd, $red: -10, $blue: 10),
-  rgba: rgba(255, 0, 0, .5),
-  darken: darken(#b37399, 20%)
+  'str-index': str-index("Helvetica Neue", "Neue"),
+  'adjust-color': adjust-color(#d2e1dd, $red: -10, $blue: 10),
+  'rgba': rgba(255, 0, 0, .5),
+  'darken': darken(#b37399, 20%)
 );
