--- a/test/scss/_variables.scss
+++ b/test/scss/_variables.scss
@@ -60,6 +60,7 @@ $font-size-small: 15px;
 $font-size-large: 18px;
 $icon-font-size: $font-size-small;
 $icon-font-size-lg: $font-size-large;
+$comma-seperated-list: Arial, Helvetica, sans-serif;
 
 //@sass-export=false
 $brand-colors: (
